--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1072,22 +1072,31 @@ m4trace:configure.ac:33: -1- PKG_CHECK_EXISTS([glew], [pkg_cv_[]GLEW_LIBS=`$PKG_
 m4trace:configure.ac:33: -1- _PKG_SHORT_ERRORS_SUPPORTED
 m4trace:configure.ac:33: -1- m4_pattern_allow([^HAVE_LIBGLEW$])
 m4trace:configure.ac:33: -1- m4_pattern_allow([^HAVE_LIBGLEW$])
-m4trace:configure.ac:47: -1- m4_pattern_allow([^off_t$])
-m4trace:configure.ac:48: -1- m4_pattern_allow([^size_t$])
-m4trace:configure.ac:51: -1- m4_pattern_allow([^HAVE_STDLIB_H$])
-m4trace:configure.ac:51: -1- m4_pattern_allow([^HAVE_MALLOC$])
-m4trace:configure.ac:51: -1- m4_pattern_allow([^HAVE_MALLOC$])
-m4trace:configure.ac:51: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:51: -1- m4_pattern_allow([^malloc$])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:58: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:58: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:58: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:58: -1- _AC_AM_CONFIG_HEADER_HOOK(["$ac_file"])
-m4trace:configure.ac:58: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
-m4trace:configure.ac:58: -1- AM_RUN_LOG([cd "$am_dirpart" \
+m4trace:configure.ac:43: -1- PKG_CHECK_MODULES([SDL2], [sdl2], [AC_DEFINE([HAVE_SDL], [1], [Define if SDL2 is available.])], [])
+m4trace:configure.ac:43: -1- m4_pattern_allow([^SDL2_CFLAGS$])
+m4trace:configure.ac:43: -1- m4_pattern_allow([^SDL2_LIBS$])
+m4trace:configure.ac:43: -1- PKG_CHECK_EXISTS([sdl2], [pkg_cv_[]SDL2_CFLAGS=`$PKG_CONFIG --[]cflags "sdl2" 2>/dev/null`
+		      test "x$?" != "x0" && pkg_failed=yes ], [pkg_failed=yes])
+m4trace:configure.ac:43: -1- PKG_CHECK_EXISTS([sdl2], [pkg_cv_[]SDL2_LIBS=`$PKG_CONFIG --[]libs "sdl2" 2>/dev/null`
+		      test "x$?" != "x0" && pkg_failed=yes ], [pkg_failed=yes])
+m4trace:configure.ac:43: -1- _PKG_SHORT_ERRORS_SUPPORTED
+m4trace:configure.ac:43: -1- m4_pattern_allow([^HAVE_SDL$])
+m4trace:configure.ac:49: -1- m4_pattern_allow([^off_t$])
+m4trace:configure.ac:50: -1- m4_pattern_allow([^size_t$])
+m4trace:configure.ac:53: -1- m4_pattern_allow([^HAVE_STDLIB_H$])
+m4trace:configure.ac:53: -1- m4_pattern_allow([^HAVE_MALLOC$])
+m4trace:configure.ac:53: -1- m4_pattern_allow([^HAVE_MALLOC$])
+m4trace:configure.ac:53: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:53: -1- m4_pattern_allow([^malloc$])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:60: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:60: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:60: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:60: -1- _AC_AM_CONFIG_HEADER_HOOK(["$ac_file"])
+m4trace:configure.ac:60: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.ac:60: -1- AM_RUN_LOG([cd "$am_dirpart" \
       && sed -e '/# am--include-marker/d' "$am_filepart" \
         | $MAKE -f - am--depfiles])
