--- a/autom4te.cache/traces.2
+++ b/autom4te.cache/traces.2
@@ -402,64 +402,74 @@ m4trace:configure.ac:33: -1- AH_OUTPUT([HAVE_LIBGLEW], [/* Define to 1 if you ha
 @%:@undef HAVE_LIBGLEW])
 m4trace:configure.ac:33: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBGLEW])
 m4trace:configure.ac:33: -1- m4_pattern_allow([^HAVE_LIBGLEW$])
-m4trace:configure.ac:46: -1- AH_OUTPUT([inline], [/* Define to `__inline__\' or `__inline\' if that\'s what the C compiler
+m4trace:configure.ac:43: -1- AC_SUBST([SDL2_CFLAGS])
+m4trace:configure.ac:43: -1- AC_SUBST_TRACE([SDL2_CFLAGS])
+m4trace:configure.ac:43: -1- m4_pattern_allow([^SDL2_CFLAGS$])
+m4trace:configure.ac:43: -1- AC_SUBST([SDL2_LIBS])
+m4trace:configure.ac:43: -1- AC_SUBST_TRACE([SDL2_LIBS])
+m4trace:configure.ac:43: -1- m4_pattern_allow([^SDL2_LIBS$])
+m4trace:configure.ac:43: -1- AC_DEFINE_TRACE_LITERAL([HAVE_SDL])
+m4trace:configure.ac:43: -1- m4_pattern_allow([^HAVE_SDL$])
+m4trace:configure.ac:43: -1- AH_OUTPUT([HAVE_SDL], [/* Define if SDL2 is available. */
+@%:@undef HAVE_SDL])
+m4trace:configure.ac:48: -1- AH_OUTPUT([inline], [/* Define to `__inline__\' or `__inline\' if that\'s what the C compiler
    calls it, or to nothing if \'inline\' is not supported under any name.  */
 #ifndef __cplusplus
 #undef inline
 #endif])
-m4trace:configure.ac:47: -1- AC_DEFINE_TRACE_LITERAL([off_t])
-m4trace:configure.ac:47: -1- m4_pattern_allow([^off_t$])
-m4trace:configure.ac:47: -1- AH_OUTPUT([off_t], [/* Define to `long int\' if <sys/types.h> does not define. */
+m4trace:configure.ac:49: -1- AC_DEFINE_TRACE_LITERAL([off_t])
+m4trace:configure.ac:49: -1- m4_pattern_allow([^off_t$])
+m4trace:configure.ac:49: -1- AH_OUTPUT([off_t], [/* Define to `long int\' if <sys/types.h> does not define. */
 @%:@undef off_t])
-m4trace:configure.ac:48: -1- AC_DEFINE_TRACE_LITERAL([size_t])
-m4trace:configure.ac:48: -1- m4_pattern_allow([^size_t$])
-m4trace:configure.ac:48: -1- AH_OUTPUT([size_t], [/* Define to `unsigned int\' if <sys/types.h> does not define. */
+m4trace:configure.ac:50: -1- AC_DEFINE_TRACE_LITERAL([size_t])
+m4trace:configure.ac:50: -1- m4_pattern_allow([^size_t$])
+m4trace:configure.ac:50: -1- AH_OUTPUT([size_t], [/* Define to `unsigned int\' if <sys/types.h> does not define. */
 @%:@undef size_t])
-m4trace:configure.ac:51: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
+m4trace:configure.ac:53: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
 @%:@undef HAVE_STDLIB_H])
-m4trace:configure.ac:51: -1- AC_DEFINE_TRACE_LITERAL([HAVE_STDLIB_H])
-m4trace:configure.ac:51: -1- m4_pattern_allow([^HAVE_STDLIB_H$])
-m4trace:configure.ac:51: -1- AC_DEFINE_TRACE_LITERAL([HAVE_MALLOC])
-m4trace:configure.ac:51: -1- m4_pattern_allow([^HAVE_MALLOC$])
-m4trace:configure.ac:51: -1- AH_OUTPUT([HAVE_MALLOC], [/* Define to 1 if your system has a GNU libc compatible `malloc\' function, and
+m4trace:configure.ac:53: -1- AC_DEFINE_TRACE_LITERAL([HAVE_STDLIB_H])
+m4trace:configure.ac:53: -1- m4_pattern_allow([^HAVE_STDLIB_H$])
+m4trace:configure.ac:53: -1- AC_DEFINE_TRACE_LITERAL([HAVE_MALLOC])
+m4trace:configure.ac:53: -1- m4_pattern_allow([^HAVE_MALLOC$])
+m4trace:configure.ac:53: -1- AH_OUTPUT([HAVE_MALLOC], [/* Define to 1 if your system has a GNU libc compatible `malloc\' function, and
    to 0 otherwise. */
 @%:@undef HAVE_MALLOC])
-m4trace:configure.ac:51: -1- AC_DEFINE_TRACE_LITERAL([HAVE_MALLOC])
-m4trace:configure.ac:51: -1- m4_pattern_allow([^HAVE_MALLOC$])
-m4trace:configure.ac:51: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS malloc.$ac_objext"])
-m4trace:configure.ac:51: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:51: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:51: -1- AC_LIBSOURCE([malloc.c])
-m4trace:configure.ac:51: -1- AC_DEFINE_TRACE_LITERAL([malloc])
-m4trace:configure.ac:51: -1- m4_pattern_allow([^malloc$])
-m4trace:configure.ac:51: -1- AH_OUTPUT([malloc], [/* Define to rpl_malloc if the replacement function should be used. */
+m4trace:configure.ac:53: -1- AC_DEFINE_TRACE_LITERAL([HAVE_MALLOC])
+m4trace:configure.ac:53: -1- m4_pattern_allow([^HAVE_MALLOC$])
+m4trace:configure.ac:53: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS malloc.$ac_objext"])
+m4trace:configure.ac:53: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:53: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:53: -1- AC_LIBSOURCE([malloc.c])
+m4trace:configure.ac:53: -1- AC_DEFINE_TRACE_LITERAL([malloc])
+m4trace:configure.ac:53: -1- m4_pattern_allow([^malloc$])
+m4trace:configure.ac:53: -1- AH_OUTPUT([malloc], [/* Define to rpl_malloc if the replacement function should be used. */
 @%:@undef malloc])
-m4trace:configure.ac:54: -1- AC_CONFIG_FILES([Makefile
+m4trace:configure.ac:56: -1- AC_CONFIG_FILES([Makefile
                  src/Makefile
                  test/Makefile])
-m4trace:configure.ac:58: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:58: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:58: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:58: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:58: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:58: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:58: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:60: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:60: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:60: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:60: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:60: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:60: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:60: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([MKDIR_P])
